Home - recyclerview add paging3 done - change language done Detail - link webview done - back home doing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="zh_tw">繁體中文</string>
+    <string name="zh_cn">簡體中文</string>
+    <string name="en">英文</string>
+    <string name="ja">日文</string>
+    <string name="ko">韓文</string>
+    <string name="es">西班牙文</string>
+    <string name="id">印尼文</string>
+    <string name="th">泰文</string>
+    <string name="vi">越南文</string>
 </resources>
