Home - add paging progressbar - fix recyclerview text html tag Detail - fix backPressed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="id">印尼文</string>
     <string name="th">泰文</string>
     <string name="vi">越南文</string>
+
+
+    <string name="retry">重整頁面</string>
+    <string name="no_results">等待資料</string>
+
+
 </resources>
